<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/stat_title_game_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/stat_game_started"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/stat_game_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/stat_title_game_started"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/stat_title_game_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/stat_game_completed"
        android:layout_below="@id/stat_title_game_started"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/stat_game_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/stat_title_game_completed"
        android:layout_below="@id/stat_game_started"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/stat_title_avg_guesses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/stat_average_num_guesses"
        android:layout_below="@id/stat_title_game_completed"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/stat_avg_guesses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/stat_title_avg_guesses"
        android:layout_below="@id/stat_game_completed"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/stat_title_best_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/stat_best_game"
        android:layout_below="@id/stat_title_avg_guesses"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/stat_best_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/stat_title_best_game"
        android:layout_below="@id/stat_avg_guesses"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/stat_title_worst_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/stat_worst_game"
        android:layout_below="@id/stat_title_best_game"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/stat_worst_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/stat_title_worst_game"
        android:layout_below="@id/stat_best_game"
        android:textStyle="bold"
        android:textSize="20dp"/>

</RelativeLayout>